# tyr

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: AddGTest.cmake  FindClangFormat.cmake  FindLLVM.cmake  gtest.cfg  tyr-config-version.cmake.in  tyr-config.cmake.in
doc/: OverridingBuiltins.md  RustBindings.md  Syntax.md
docker/: Dockerfile
example/: example.cpp
examples/: CMakeLists.txt
examples/graph/: CMakeLists.txt  allocator.cpp  graph.cpp  graph.tyr
lib/compiler/: CMakeLists.txt
lib/compiler/CodeGen/: CMakeLists.txt  Module.cpp  Module.hpp  PassManager.cpp  PassManager.hpp
lib/compiler/CodeGen/BindingCodeGen/: CCodegenPass.cpp  CCodegenPass.hpp  RustCodegenPass.cpp  RustCodegenPass.hpp
lib/compiler/CodeGen/LLVMCodegenPass/: LLVMCodegenPass.cpp  LLVMCodegenPass.hpp
lib/compiler/CodeGen/LLVMIRGen/: LLVMIRGenPass.cpp  LLVMIRGenPass.hpp
lib/compiler/CodeGen/ObjectCodegenPass/: ObjectCodegenPass.cpp  ObjectCodegenPass.hpp
lib/compiler/IR/: CMakeLists.txt  IR.cpp  IR.hpp  Pass.hpp
lib/compiler/Parser/: CMakeLists.txt  Parser.cpp  Parser.hpp
lib/compiler/Runtime/: Base64.c  Base64.h  CMakeLists.txt  FileHelper.c  FileHelper.h
lib/compiler/codegen/: BindGen.cpp  BindGen.hpp  CMakeLists.txt  CodeGen.cpp  CodeGen.hpp  StructGen.cpp  StructGen.hpp
lib/compiler/codegen/Generators/: C.cpp  C.hpp  Python.cpp  Python.hpp
lib/compiler/frontend/: CMakeLists.txt  Parser.cpp  Parser.hpp
lib/compiler/ir/: CMakeLists.txt  IR.cpp  IR.hpp  Pass.hpp  PassManager.cpp  PassManager.hpp  Visitor.hpp
lib/compiler/llvm/: CMakeLists.txt
lib/compiler/llvm/Passes/: CMakeLists.txt  Passes.hpp  UnifyFnAttrs.cpp
lib/compiler/passes/: BindingCodegenPass.hpp  CCodegenPass.cpp  CMakeLists.txt  LLVMCodegenPass.cpp  LLVMCodegenPass.hpp  PythonCodegenPass.cpp
lib/compiler/runtime/: CMakeLists.txt  FileHelper.c  FileHelper.h
lib/compiler/visitors/: CMakeLists.txt  LLVMVisitor.cpp  LLVMVisitor.hpp
lib/test/: BindGen.cpp  CMakeLists.txt  CodeGen.cpp  Parser.cpp  StructGen.cpp
lib/tools/: CMakeLists.txt
lib/tools/tyr-rt/: CMakeLists.txt  FileHelper.c
lib/tools/tyrc/: CMakeLists.txt  Frontend.cpp
scripts/: emit-llvm.sh
src/compiler/: CMakeLists.txt
src/compiler/include/: Loader.hpp  PureFinder.hpp  Register.hpp  RouteFinder.hpp
src/compiler/passes/: FindMarkedFunctions.cpp  PrintFunctionName.cpp
src/compiler/src/: Loader.cpp  PureFinder.cpp  RouteFinder.cpp
src/compiler/test/: TestLoader.cpp
src/runtime/: CMakeLists.txt
src/runtime/include/: Processor.hpp  Router.hpp
src/runtime/proto/: runtime.proto
src/runtime/src/: Processor.cpp  Router.cpp
test/: CMakeLists.txt  Makefile  example.cpp  path.tyr  run-test.sh
test/c/: integration_test.cpp
test/override/: allocator.c
test/python/: integration_test.py
test/rust/: Cargo.toml  build.rs
test/rust/src/: main.rs
test/x-lang/: integration_test.cpp  integration_test.py
